--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,8 @@
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/styles/_theme.scss"
             ],
             "scripts": []
           },
@@ -93,3 +94,4 @@
     }
   }
 }
+
